support name of function pointer

--- a/tests/decl.yml
+++ b/tests/decl.yml
@@ -52,7 +52,8 @@ declarations:
         kind: void
         name: void
       params:
-      - type:
+      - name: a
+        type:
           kind: float
           name: double
       - type:
