--- a/tests/enum.yml
+++ b/tests/enum.yml
@@ -19,17 +19,14 @@ unions:
   members:
   - name: bar
     type:
-      kind: pointer
-      type:
-        kind: enum
-        name: C
+      kind: enum
+      name: C
 typedefs:
 - name: D_t
   type:
     kind: enum
     members:
     - name: D0
-      val: 0
 - name: E_t
   type:
     kind: enum
@@ -46,22 +43,24 @@ enums:
 - name: A
   members:
   - name: A0
-    val: 0
 - name: B
   members:
   - name: B0
-    val: 1
+    val: '1'
 - name: C
   members:
   - name: C0
-    val: 1
+    val: '1'
   - name: C1
-    val: 2
+    val: '2'
+  - name: C2
+    val: '0x3'
+  - name: C3
+    val: C1+C2
 - name: E
   members:
   - name: E0
-    val: 0
 - name: F
   members:
   - name: F0
-    val: 10
+    val: '10'
