--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.8"
+          - "3.10"
           - "3.12"
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
         # For example, using `pytest`
         run: |
           # Run pytest under coverage
-          uv run coverage run -m pytest
+          CC=gcc uv run coverage run -m pytest
           # Report coverage and fail if coverage is less than 100%
           uv run coverage report --fail-under=100
 
