support forward progress

--- a/tests/struct.yml
+++ b/tests/struct.yml
@@ -1,4 +1,3 @@
----
 declarations:
 - name: Av
   type:
@@ -103,11 +102,23 @@ structs:
       name: unsigned int
   name: A7
 - members:
+  - name: x
+    type:
+      kind: int
+      name: int
+  name: A8
+- members:
   - name: a
     type:
       kind: int
       name: int
   name: A10
+- members:
+  - name: a
+    type:
+      kind: int
+      name: int
+  name: A11
 typedefs:
 - name: a5
   type:
