--- a/tests/enum.yml
+++ b/tests/enum.yml
@@ -39,10 +39,19 @@ enums:
   - name: H0
     val: 0
 functions:
-- name: foo
+- name: foo1
   params:
-  - name: a
-    type:
+  - type:
+      kind: enum
+      members:
+      - name: H0
+        val: 0
+  type:
+    kind: void
+    name: void
+- name: foo2
+  params:
+  - type:
       kind: enum
       members:
       - name: H0
