--- a/tests/decl.yml
+++ b/tests/decl.yml
@@ -1,4 +1,3 @@
----
 declarations:
 - name: a0
   type:
@@ -128,6 +127,12 @@ declarations:
       type:
         kind: int
         name: int
+- init: '1'
+  name: a
+  storage: static
+  type:
+    kind: int
+    name: int
 typedefs:
 - name: a8_t
   type:
